# vconfig

./: .clang-format  CMakeLists.txt  CMakePresets.json  config.cpp  config.hpp  vcpkg.json
tests/: CMakeLists.txt
vconfig/: config.cpp  config.hpp  vconfig.cpp  vconfig.hpp
